correction for the preloader to be 'behind'

--- a/sass/preloader.scss
+++ b/sass/preloader.scss
@@ -19,14 +19,22 @@
     0% {
       opacity: 1;
       z-index: 900;
+      height: 100vh;
     }
 
     90% {
       opacity: 1;
       z-index: 900;
+      height: 100vh;
+    }
+
+    99% {
+      z-index: 900;
+      height: 100vh;
     }
 
     100% {
+      height: 0vh;
       opacity: 0;
       z-index: 0;
     }
